--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,10 @@
 body{
     font-family: 'Inter', sans-serif;
     background-color: #F3F3F3;
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 60px;
+}
+.brr{
+    border: 1px solid red;
 }
